# everywhere

./: .gitignore  .npmignore  Cargo.toml  README.md  build.sh  package.json
.github/workflows/: release.yml
node/: Cargo.toml
src/: index.rs  lib.rs  main.rs  node-build.rs  node-lib.rs  wasm-build.rs  wasm-lib.rs
wasm/: Cargo.toml
